# bevy_jam

./: Cargo.toml
assets/: buildings.ase  canvas.ase  hairs.ase  map — копия.ldtk  map.ldtk  testmap.ldtk  treeshader.wgsl
assets/map/: map.ldtk  release_map.ldtk  treemap.ldtk
assets/map/backups/2db40cb0-25d0-11ef-94ec-836f677b91ab_2024-07-23_00-18-42_crash/: map.ldtk
assets/shaders/: post_processing.wgsl
src/: anim.rs  main.rs  map_pathfind.rs  pathfind.rs  player_controller.rs  portal.rs  systems.rs  test.rs
src/characters/: animation.rs  character.rs  characters.rs  generator.rs  mod.rs  plugin.rs
src/core/: camera.rs  default.rs  functions.rs  mod.rs  post_processing.rs  ui.rs
src/core/debug/: diagnostics_screen.rs  mod.rs
src/core/debug/diagnostics_screen/: plugin.rs
src/core/debug/egui_inspector/: plugin.rs
src/map/: plugin.rs  tilemap.rs
src/npc/: components.rs  mod.rs  pathfinder.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs  upgrade_ui.rs
src/sounds/: components.rs  systems.rs
src/stuff/: mod.rs
