[package]
name = "bevy_jam"
version = "0.0.0-dev"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.14", features = ["bevy_dynamic_plugin", "multi_threaded", "dynamic_linking"]} 

bevy_ecs_ldtk = "0.10.0"

bevy-inspector-egui = "0.25.0"

bevy_rapier2d = {version = "0.27.0", features = ["parallel", "debug-render-2d", "simd-stable"]}

num_enum = "0.7.2"

rand = "0.8.5"
rand_chacha = "0.3.1" # unused
weighted_rand = "0.4.2" # unused

bevy_hanabi = {version = "0.12"} #, default-features = false, features = [ "2d" ]
pathfinding = "4.10.0"
bevy_easings = "0.14.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "controller"
path = "src/player_controller.rs"

[[bin]]
name = "anim"
path = "src/anim.rs"

[[bin]]
name = "test"
path = "src/test.rs"
