[package]
name = "bevy_jam"
version = "0.1.0-dev"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#opt-level = "s"
#codegen-units = 1
#lto = "thin"
#strip = "debuginfo"
#incremental = false
#debug = false
#
#[lints.clippy]
#too_many_arguments = "allow"
#type_complexity = "allow"
#
#[profile.dev.package.wgpu-types]
#debug-assertions = false

[dependencies]
bevy = { version = "0.14", features = ["multi_threaded", "dynamic_linking"]} #, "bevy_dynamic_plugin"

bevy_ecs_ldtk = "0.10.0"

bevy_kira_audio = { version = "0.20.0", features = ["wav", "flac"] }

bevy-inspector-egui = "0.25.0"

bevy_rapier2d = {version = "0.27.0", features = ["debug-render-2d", "simd-stable"]} #"parallel", 

num_enum = "0.7.2"

rand = "0.8.5"
rand_chacha = "0.3.1" # unused
weighted_rand = "0.4.2" # unused

bevy_hanabi = {version = "0.12"} #, default-features = false, features = [ "2d" ]
pathfinding = "4.10.0"
bevy_easings = "0.14.0"
bevy_light_2d = "0.2.1"
bevy_tween = "0.6.0"
noise = "0.9.0"
rayon = "1.10.0"
